--- a/docsettings.sty
+++ b/docsettings.sty
@@ -3,6 +3,8 @@
 
 %misc
 \usetikzlibrary{calc}
+\usepackage{fontspec}
+\newfontfamily{\testkpse}{Gost Type A}
 
 %font
 \setmainfont{Times New Roman}
