--- a/title.tex
+++ b/title.tex
@@ -29,15 +29,15 @@
 	\vspace{14pt}
 		\mytitle
 	\end{center}
-	\vspace{49pt}
+	\vspace{35pt}
 	\begin{flushleft}
 		\begin{tabular}{p{0.47\textwidth}l}
-			КОНСУЛЬТАНТ			&  РУКОВОДИТЕЛЬ ПРОЕКТА		\\
-			по нормоконтролю	&  ст. пр. Звонков И.В.		\\
-			??????????			&  							\\
+			КОНСУЛЬТАНТ					&  РУКОВОДИТЕЛЬ ПРОЕКТА		\\
+			по нормоконтролю			&  ст. пр. Звонков И.В.		\\
+			к.т.р. доцент Матиенко Л.В.	&  							\\
 		\end{tabular}
 	\end{flushleft}
-	\vspace{49pt}
+	\vspace{35pt}
 	\begin{flushleft}
 		\begin{tabular}{p{0.47\textwidth}l}
 								&  ИСПОЛНИТЕЛЬ				\\
