add section numbering

--- a/docsettings.sty
+++ b/docsettings.sty
@@ -25,9 +25,9 @@
 \titleformat{\chapter}[hang]
 	{\vspace{-70pt}\normalsize}{\thechapter\ }{0pt}{\centering}[\vspace{-42pt}]
 \titleformat{\section}[hang]
-{\normalsize}{\thesection\ }{0pt}{}[\vspace{-11pt}]
+{\normalsize}{\thesection\ }{0pt}{\hspace{14pt}\thesection \ }[\vspace{-11pt}]
 \titleformat{\subsection}[hang]
-	{\normalsize}{\thesubsection\ }{0pt}{}
+	{\normalsize}{\thesubsection\ }{0pt}{\hspace{14pt}\thesubsection\ }
 \titleformat{\subsubsection}[hang]
 	{\normalsize}{\thesubsubsection\ }{0pt}{}
 
