--- a/src/task.tex
+++ b/src/task.tex
@@ -4,7 +4,7 @@
 		и использования системы логического вывода в рассматриваемой задаче.
 		Поэтому оправданы все упрощения, которые неизбежны при построении моделей и переходе к реальному приложению.
 
-\subsection{Упрощения}
+\section{Упрощения}
 	Первым основным упрощением является дискретность времени с заданной величиной интервала между
 		соседними моментами времени (тактами), содержащее начальный момент и бесконечно продолжимое вправо.
 		Высота этажей считается одинаковой, и скорость движения лифта с одного этажа на другой полагаем
