--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -1,1 +1,23 @@
 \chapter*{Заключение}\addcontentsline{toc}{chapter}{Заключение}
+
+	Несмотря на тот факт, что более сложные решения в управлении лифтовыми группами нуждаются в большом объёме ресурсов,
+		интеллектуальные системы управления позволяют своевременно справляться с пассажиропотоком в среде с быстро
+		меняющимися условиями. А также подобная система позволит учитывать вновь возникшие условия и принципы
+		среды, в которой происходит управление, без существенных изменений в программной реализации, что снижает
+		стоимость поддержки данной системы. Плюс, упрощается процесс разработки сложных алгоритмов управления.
+
+	Полученные при программном моделировании результаты показали, что посредством добавления дополнительных условий
+		можно улучшать интересуемые показатели, например: среднее время ожидания кабины пассажиром и
+		характеристики построения логического вывода.
+
+	Принцип рассмотрения вариантов возможного будущего, позволяет сделать систему управления более гибкой в отношении к
+		особенностям пассажиропотока, зависящими от времени суток или другим временным факторам.
+
+	Разработанные программные решения могут быть использованы для моделирования более сложных сред для проведения
+		экспериментов и построения гипотез.
+
+	Следующим шагом в развитии данной работы будет разбиение разработанного программного решения на два бока: логический и
+		физический. Где логический блок будет отвечать за принятие решения, а физический блок за физические процессы,
+		протекаемые в построенной модели. После чего можно будет вести разработку двух блоков независимо друг от друга.
+		Что приведёт к использованию новой оптимизированной интеллектуальной системы управления и замене физической
+		модели на реальную систему лифтов.
