--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -1,1 +1,80 @@
 \chapter*{Введение}\addcontentsline{toc}{chapter}{Введение}
+	На сегодняшний день неотъемлемой частью технического оснащения практически любого здания
+		является подъемное устройство. Это может быть эскалатор, подъемная платформа,
+		но самым распространенным оборудованием является лифт.
+
+	Лифт -- это грузоподъемное устройство, предназначенное для вертикального перемещения
+		грузов и людей в кабине, передвигающейся по жестким направляющим.
+		По конструктивным особенностям лифты бывают различными, но несмотря на это действуют они по одному принципу.
+
+	В устройстве любого лифта обязательно присутствуют определенные компоненты,
+		такие как кабина (или платформа), она закрепляется на стальных тросах,
+		перекинутых через шкив приводного механизма, передающего силу с одного места на другое.
+		В машинном отделении в верхней части шахты лифта расположен сам приводной механизм
+		вместе с аппаратурой управления лифтом, куда и передаются сигналы из кабины лифта. 
+
+	Лифты подразделяются на категории по видам транспортируемых грузов.
+
+	Существуют лифты пассажирские, используемые в жилых, общественных зданиях.
+		В пассажирском лифте допускается перевозка легких грузов и предметов домашнего обихода при условии,
+		что их общая масса вместе с пассажиром не превышает грузоподъемности лифта.
+		Такие лифты могут быть также с увеличенной платформой - для перевозки больных и инвалидов,
+		поскольку они обязательно должны вмещать на платформу инвалидную коляску или кушетку.
+
+	Еще одной категорией являются грузовые лифты, которые также могут подразделяться
+		по видам прилагаемой подъемной силы (к верхней части кабины, либо к нижней).
+
+	Лифты могут также классифицироваться по способу обслуживания.
+		В этом случае различают лифты самостоятельного пользования,
+		которыми управляет сам пассажир, и лифты, которыми управляет проводник и которые всегда сопровождают груз.
+
+	Разные лифты движутся с различной скоростью. По скорости движения кабины они подразделяются на следующие типы:
+		\begin{itemize}
+			\changefontsizes[14pt]{14pt}
+			\item[--] тихо­ходные (до 1,0 м/с);
+			\item[--] быстроходные (от 1,0 до 2,0 м/с);
+			\item[--] скоростные (от 2,0 до 4,0 м/с);
+			\item[--] высокоскоростные (свыше 4,0 м/с).
+			\vspace{-14pt}
+		\end{itemize}
+
+	Относительно типа привода подъемного механизма лифты подразделяются на электрические
+		(с приводом от электродвигателя пе­ременного или постоянного тока)
+		и гидравлические (с приводом в виде подъемного гидроцилиндра или лебедки с гидродвига­телем вращательного типа).
+
+	В устройстве лифта важна не только механика и принцип движения кабины в пространстве,
+		но также и способы реагирования лифта на поступающие от пользователей запросы.
+		По способу управления лифты различают:
+		\begin{itemize}
+			\changefontsizes[28pt]{14pt}
+			\item[--] простое раздельное управление. В данном случае регистрируется
+				и выполняется только одна команда (приказ или вызов);
+			\item[--] собирательное управление, при котором регистрируются все команды,
+				а их выполнение осуществляется в соответствии с программой работы лифта.
+				При этом могут совершаться попутные остановки по вызовам или приказам.
+				Для лифтов жилых зданий попутные остановки по вызовам выполняются только
+				при движении кабины вниз, а в общественных зданиях - в обоих направлениях.
+				По приказам попутные остановки предусмотрены во всех лифтах в обоих направлениях;
+			\item[--] одиночное управление (управление одним лифтом);
+			\item[--] групповое - управление группой лифтов, расположенных в одной шахте,
+				обслуживающих одни и те же этажи и имеющих одинаковую скорость.
+				Разновидностью группового управления является парное управление лифтами,
+				применяемое в жилых зданиях повышенной этажности.
+			\vspace{-14pt}
+		\end{itemize}
+
+	В данной работе будут рассмотрены проблемы группового управления лифтами.
+
+	Целью выпускной квалификационной работы является разработка программного решения,
+		подтверждающего принципиальную возможность и целесообразность построения
+		и использования системы логического вывода в интеллектуальном управлении группой лифтов.
+
+	В рамках данной цели необходимо выполнить следующие задачи:
+		\begin{itemize}
+			\changefontsizes[14pt]{14pt}
+			\item[--] изучить принципы автоматического логического вывода;
+			\item[--] разработать математическую модель интеллектуального управления группой лифтов;
+			\item[--] разработать варианты программной реализации модели интеллектуального управления группой лифтов;
+			\item[--] провести сравнительный анализ полученный программных решений.
+			\vspace{-14pt}
+		\end{itemize}
