Add domain knowledge

--- a/docsettings.sty
+++ b/docsettings.sty
@@ -5,6 +5,7 @@
 \usetikzlibrary{calc}
 \usepackage{fontspec}
 \newfontfamily{\testkpse}{Gost Type A}
+\setlength{\belowcaptionskip}{-28pt}
 
 %font
 \setmainfont{Times New Roman}
