--- a/src/project.tex
+++ b/src/project.tex
@@ -139,3 +139,11 @@ SymPy можно использовать не только как модуль,
 		к решению задачи.
 
 		Но не смотря на провал с большими числами. Третья реализация показала себя лучше, чем остальные.
+
+
+\input{src/tables/projectt1.tex}
+\input{src/tables/projectt2.tex}
+\input{src/tables/projectt3.tex}
+\input{src/tables/projectt4.tex}
+
+% python 12.2 0.065
