--- a/src/tables/projectt1.tex
+++ b/src/tables/projectt1.tex
@@ -1,24 +1,26 @@
 {
 \changefontsizes[12pt]{12pt}
+\captionsetup{font=large,margin=21pt}
 
-\begin{longtable}[t]{@{\extracolsep{\fill}}|l|@{\hskip-14pt}p{0.3\textwidth}|@{\hskip-14pt}p{0.3\textwidth}|l|}
-	\caption{Воздействие климатических факторов} \label{projectt1} \\ \hline
-	{\No} & Наименование элемента
-		   & Интенсивность отказов $\lambda * 10^{-6}$, 1/ч
-				& Кол-во   \\ \hline
+\vspace{14pt}
+\begin{longtable}[t]{@{\extracolsep{\fill}}|l|@{\hskip+35pt}p{0.15\textwidth}|@{\hskip+35pt}p{0.15\textwidth}|@{\hskip+35pt}p{0.15\textwidth}|}
+% \begin{longtable}[t]{@{\extracolsep{\fill}}|l|@{\hskip-28pt}c|@{\hskip-28pt}c|@{\hskip-28pt}c|}
+	\caption{Сравнение по среднему времени ожидания \vspace{-35pt}} \label{projectt1} \\ \hline
+			&&&\\[-7pt]
+	Способ управления
+		& 30 этажей \hspace{14pt}
+			& 15 этажей \hspace{14pt}
+				& 5 этажей  \hspace{14pt}  \\  \hline
 	\endfirsthead
-	\caption* {Продолжение таблицы \ref{projectt1}}\\ \hline
-	{\No} & Наименование элемента
-		   & Интенсивность отказов $\lambda * 10^{-6}$, 1/ч
-				& Кол-во   \\ \hline \endhead
-	1     &	Пайка			&	0,005	& 94	\\ \hline
-	2     &	АЦП				&	0,15	& 1		\\ \hline
-	3     &	ЦАП				&	0,15	& 1		\\ \hline
-	4     &	АУ				&	0,15	& 1		\\ \hline
-	5     &	Регистр			&	0,15	& 1		\\ \hline
-	6     &	Компаратор		&	0,2		& 2		\\ \hline
-	7     &	Резисторы		&	0,05	& 10	\\ \hline
-	8     &	Конденсаторы	&	0,14	& 2     \\ \hline
-	9     &	Диоды			&	0,12	& 4     \\ \hline
+	\caption* {Продолжение таблицы \ref{projectt1}\vspace{-35pt}}\\ \hline
+			&&&\\[-7pt]
+	Способ управления
+		& 30 этажей
+			& 15 этажей
+			& 5 этажей   \\ \hline \endhead 
+			&&&\\[-7pt]
+	I тип     &	7.5		&	6	& 2.7	\\ \hline
+			&&&\\[-7pt]
+	II тип    &	9.6		&	7.1	& 3.2		\\ \hline
 \end{longtable}
 }
