Add info graphics

--- a/src/project.tex
+++ b/src/project.tex
@@ -147,3 +147,15 @@ SymPy можно использовать не только как модуль,
 \input{src/tables/projectt4.tex}
 
 % python 12.2 0.065
+
+		\begin{figure}[h]
+			\centering
+			\includegraphics[width=180mm]{src/pictures/projectp1.png}
+			\caption{Сравнение по среднему времени ожидания}\label{pt1}
+		\end{figure}
+
+		\begin{figure}[h]
+			\centering
+			\includegraphics[width=180mm]{src/pictures/projectp2.png}
+			\caption{Сравнение по времени выполнения}\label{pt2}
+		\end{figure}
