--- a/src/project/code.tex
+++ b/src/project/code.tex
@@ -1,3 +1,12 @@
+		
+		% Ниже представлен основной файл, в котором реализован инициализация логического вывода.
+		% Данный код иллюстрирует реализацию формулы времени. Благодаря функционалу SWI-Prolog
+		% в дальнейшем предикаты отражающие время можно будет указывать в правилах только при необходимости.
+
+	% Реализации правил manage\_people и manage\_elevators вынесены в другие файлы,
+	%     как как являются весьма громоздкими.
+	%     Manage\_people отвечает за внешний фактор (случайное появление нуждающихся в лифте людей).
+	%     А manage\_elevators включает в себя формулы движения лифтов.
 	\section{Реализация программного решения}
 
 		\subsection{Пример работы реализации}
