--- a/src/project/tools.tex
+++ b/src/project/tools.tex
@@ -1,29 +1,77 @@
-	\section{Используемые технологии}
+\section{Используемые технологии}
 
-	В качестве реализации языка Prolog был выбран SWI-Prolog.
-		Это открытая реализация, работающая на Unix, MacOS и Windows.
-		В данной реализации имеется необходимы функционал, а именно предикаты nb\_getval, nb\_setval и nb\_current.
-		Эти предикаты позволяют использовать другие предикаты в качестве глобальных переменных, что
-		позволяет существенно упростить написание правил для вычисления.
+	Для реализации вычисления позитивно образованных формул подошёл
+		декларативный язык программирования общего назначения Prolog. При помощи этого языка,
+		можно реализовать рассмотрение множества вариантов обхода дерева формулы.
+	
+	\subsection{SWI-Prolog}
+		Prolog -- один из старейших и все еще один из наиболее популярных языков логического программирования,
+			хотя он значительно менее популярен, чем основные императивные языки.
+			Он используется в системах обработки естественных языков, исследованиях искусственного интеллекта,
+			экспертных системах, онтологиях и других предметных областях,
+			для которых естественно использование логической парадигмы. 
+	
+		Prolog был создан под влиянием более раннего языка Planner и позаимствовал из него следующие идеи:
 
-	В процессе реализации было создано порядка десяти файлов с описанием правил логического вывода
-		общей суммой порядка семиста строк. Такое большое количество правил обусловлено наличием деталей и нюансов.
-		Ниже представлен основной файл, в котором реализован инициализация логического вывода.
-		Данный код иллюстрирует реализацию формулы времени. Благодаря функционалу SWI-Prolog
-		в дальнейшем предикаты отражающие время можно будет указывать в правилах только при необходимости.
+		\begin{itemize}
+			\item[--] обратный логический вывод (вызов процедур по шаблону, исходя из целей);
+			\item[--] построение структура управляющей логики в виде вычислений с откатами;
+			\item[--] принцип “отрицание как неудача”;
+			\item[--] использование разных имен для разных сущностей.
+		\end{itemize}
 
-	Реализации правил manage\_people и manage\_elevators вынесены в другие файлы,
-		как как являются весьма громоздкими.
-		Manage\_people отвечает за внешний фактор (случайное появление нуждающихся в лифте людей).
-		А manage\_elevators включает в себя формулы движения лифтов.
+		Главной парадигмой, реализованной в языке Prolog, является логическое программирование.
+			Как и для большинства старых языков, более поздние реализации, например, Visual Prolog,
+			добавляют в язык более поздние парадигмы, например, объектно-ориентированное или управляемое
+			событиями программирование, иногда даже с элементами императивного стиля.
+
+		Prolog использует один тип данных, терм, который бывает нескольких типов:
+
+		\begin{itemize}
+			\item[--] атом — имя без особого смысла, используемое для построения составных термов;
+			\item[--] числа и строки такие же, как и в других языках;
+			\item[--] переменная обозначается именем, начинающимся с прописной буквы,
+				и используется как символ-заполнитель для любого другого терма;
+			\item[--] составной терм состоит из атома-функтора, за которым следует несколько аргументов,
+				каждый из которых в свою очередь является атомом.
+		\end{itemize}
+
+		Программы, написанные на чистом Prolog, описывают отношения между обрабатываемыми сущностями при помощи клауз Хорна. Клауза — это формула вида Голова :- Тело., которая читается как “чтобы доказать/решить Голову, следует доказать/решить Тело”. Тело клаузы состоит из нескольких предикатов (целей клаузы), скомбинированных с помощью конъюнкции и дизъюнкции. Клаузы с пустым телом называются фактами и эквивалентны клаузам вида Голова :- true. (true — не атом, как в других языках, а встроенный предикат).
+
+		Другой важной частью Prolog являются предикаты. Унарные предикаты выражают свойства их аргументов, тогда как предикаты с несколькими аргументами выражают отношения между ними. Ряд встроенных предикатов языка выполняют ту же роль, что и функции в других языках
+
+		В качестве реализации языка Prolog был выбран SWI-Prolog.
+			В данной реализации имеется необходимы функционал, а именно предикаты nb\_getval, nb\_setval и nb\_current.
+			Эти предикаты позволяют использовать другие предикаты в качестве глобальных переменных, что
+			позволяет существенно упростить написание правил для вычисления.
+
+		SWI-Prolog — это свободная (открытая) реализация языка программирования Prolog, часто используемая для преподавания и приложений Semantic Web. Эта реализация представляет богатый набор возможностей, библиотеки для constraint logic programming, многопоточности, юнит-тестирования, интерфейс к языку программирования Java, ODBC и т. д., поддерживает литературное программирование, содержит реализацию веб-сервера, библиотеки для SGML, RDF, RDFS.
+
 \subsection{SimPy}
 
-SimPy - это Python фреймворк процессо-ориентированной дискретно-событийной системы моделирования. Его диспетчеры событий основаны на функциях-генераторах Python.
+	Так же было разработано программное решение на языке python с использование фреймворка SimPy.
+		Который позволил за короткий срок на реализовать программное решение для проведения различных тестов.  
 
-Также они могут использоваться для создания асинхронных сетей или для реализации мультиагентных систем (с как моделируемым, так и реальным взаимодействием).
+	SimPy - это Python фреймворк процессо-ориентированной дискретно-событийной системы моделирования. Его диспетчеры событий основаны на функциях-генераторах Python.
 
-Процессы в SimPy - это просто Python генераторы, которые используются для моделирования активных компонентов, например, таких как покупатели, транспортные средства или агенты. SymPy также обеспечивает различные виды общих ресурсов для моделирования точек с ограниченной пропускной способностью (например, серверов, касс, тоннелей). Начиная с версии 3.1, SimPy также будет обеспечить возможности мониторинга для помощи в сборе статистических данных о ресурсах и процессах. 
+	Также они могут использоваться для создания асинхронных сетей или для реализации мультиагентных систем (с как моделируемым, так и реальным взаимодействием).
 
-SymPy представляет собой открытую библиотеку символьных вычислений на языке Python. Цель SymPy - стать полнофункциональной системой компьютерной алгебры (CAS), при этом сохраняя код максимально понятным и легко расширяемым. SymPy полностью написан на Python и не требует сторонних библиотек.
+	Процессы в SimPy - это просто Python генераторы, которые используются для моделирования активных компонентов, например, таких как покупатели, транспортные средства или агенты. SymPy также обеспечивает различные виды общих ресурсов для моделирования точек с ограниченной пропускной способностью (например, серверов, касс, тоннелей). Начиная с версии 3.1, SimPy также будет обеспечить возможности мониторинга для помощи в сборе статистических данных о ресурсах и процессах. 
 
-SymPy можно использовать не только как модуль, но и как отдельную программу. Программа удобна для экспериментов или для обучения. Она использует стандартный терминал IPython, но с уже включенными в нее важными модулями SymPy и определенными переменными x, y, z.
+	SymPy представляет собой открытую библиотеку символьных вычислений на языке Python. Цель SymPy - стать полнофункциональной системой компьютерной алгебры (CAS), при этом сохраняя код максимально понятным и легко расширяемым. SymPy полностью написан на Python и не требует сторонних библиотек.
+
+	SymPy можно использовать не только как модуль, но и как отдельную программу. Программа удобна для экспериментов или для обучения. Она использует стандартный терминал IPython, но с уже включенными в нее важными модулями SymPy и определенными переменными.
+
+	\subsection{Дополнительный инструментарий}
+
+		В процессе реализации было создано порядка десяти файлов с описанием правил логического вывода
+			общей суммой порядка тысячи строк. Такое большое количество правил обусловлено наличием деталей и нюансов.
+
+		Как и в любом развивающемся программном решении возникает потребность вести учёт версий данного
+			программного решения. Для тих целей использовалась система контроля версий Git.
+			Что позволило не только вести учёт версий программной реализации,
+			но и размещать разрабатываемые материалы на публичном репозитории.
+
+		В качестве среды разработки использовался Vim. Данный инструмент позволяет адаптировать его
+			под любой язык программирования, так же в свободном доступе имеются расширения для Prolog,
+			Python, Git и так далее.
